Security/spire-example/docker/web/conf/envoy.yaml
node:
  id: "id_02"
  cluster: "cluster_02"

admin:
  profile_path: /tmp/envoy.prof
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
       address: 0.0.0.0
       port_value: 9901

static_resources:
  listeners:
  - name: web_to_echo_mtls_listener
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8001
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          common_http_protocol_options:
            idle_timeout: 1s
          codec_type: auto
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/dev/stdout"
          stat_prefix: ingress_http
          route_config:
            name: service_route
            virtual_hosts:
            - name: web_to_echo_mtls
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: web_to_echo_mtls
          http_filters:
          - name: envoy.filters.http.router
          
  - name: web_to_echo_tls_listener
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8002
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          common_http_protocol_options:
            idle_timeout: 1s
          codec_type: auto
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/dev/stdout"
          stat_prefix: ingress_http
          route_config:
            name: service_route
            virtual_hosts:
            - name: web_to_echo_tls
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: web_to_echo_tls
          http_filters:
          - name: envoy.filters.http.router
          
  clusters:
  - name: spire_agent
    connect_timeout: 0.25s
    http2_protocol_options: {}
    load_assignment:	
      cluster_name: spire_agent
      endpoints:	
      - lb_endpoints:	
        - endpoint:	
            address:	
              pipe:	
                path: /tmp/agent.sock
                
  - name: web_to_echo_mtls
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: ROUND_ROBIN
    load_assignment:	
      cluster_name: web_to_echo_mtls
      endpoints:	
      - lb_endpoints:	
        - endpoint:	
            address:	
              socket_address:	
                address: echo	
                port_value: 8001
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificate_sds_secret_configs:
            - name: "spiffe://magedu.com/web-server"
              sds_config:
                api_config_source:
                  api_type: GRPC
                  grpc_services:
                    envoy_grpc:
                      cluster_name: spire_agent
                  transport_api_version: V3
                resource_api_version: V3
          combined_validation_context:
            # validate the SPIFFE ID of the server (recommended)
            default_validation_context:
              match_subject_alt_names:
                exact: "spiffe://magedu.com/echo-server"
            validation_context_sds_secret_config:
              name: "spiffe://magedu.com"
              sds_config:
                api_config_source:
                  api_type: GRPC
                  grpc_services:
                    envoy_grpc:
                      cluster_name: spire_agent
                  transport_api_version: V3
                resource_api_version: V3
          tls_params:
            ecdh_curves:
              - X25519:P-256:P-521:P-384
              
  - name: web_to_echo_tls
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: ROUND_ROBIN
    load_assignment:	
      cluster_name: web_to_echo_tls
      endpoints:	
      - lb_endpoints:	
        - endpoint:	
            address:	
              socket_address:	
                address: echo	
                port_value: 8002
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          combined_validation_context:
            # validate the SPIFFE ID of the server (recommended)
            default_validation_context:
              match_subject_alt_names:
                exact: "spiffe://magedu.com/echo-server"
            validation_context_sds_secret_config:
              name: "spiffe://magedu.com"
              sds_config:
                api_config_source:
                  api_type: GRPC
                  grpc_services:
                    envoy_grpc:
                      cluster_name: spire_agent
                  transport_api_version: V3
                resource_api_version: V3
          tls_params:
            ecdh_curves:
              - X25519:P-256:P-521:P-384
